# smartbasket-backend-services-auth

./: README.md
auth_service/: .env  Dockerfile  pyproject.toml
auth_service/app/: main.py
auth_service/app/api/v1/: router.py
auth_service/app/core/: config.py
