[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["DisaniaS"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = ">=0.115.8"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic-settings = "^2.3.0"
redis = "^5.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aiokafka = "^0.10.0"  # только для сервисов с Kafka

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
httpx = "^0.27"
ruff = "^0.4"
mypy = "^1.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
